// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KbqInlineEdit should add css class when label provided 1`] = `
[
  "kbq-inline-edit",
  "kbq-inline-edit_view",
  "kbq-inline-edit_with-label",
]
`;

exports[`KbqInlineEdit should setup with default parameters 1`] = `
[
  "kbq-inline-edit",
  "kbq-inline-edit_view",
]
`;
